Pasting Geo Nodes referencing an ID (e.g. Set Material or Object Info) into new file crashes Blender #120103

Closed
opened 2024-03-31 03:29:23 +02:00 by D · 13 comments

System Information
Operating system: macOS-13.6.6-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon RX 580 1.2

Blender Version
Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: 40a5e739e270
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash on pasting geo nodes in new file.

Exact steps for others to reproduce the error

  1. Open file with Geo Nodes.
  2. Select geo nodes.
  3. Right click and select copy.
  4. Open new file.
  5. create plane, switch to geo node tab.
  6. New geo node modifier.
  7. Paste geo nodes.
    Immediate crash.
**System Information** Operating system: macOS-13.6.6-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon RX 580 1.2 **Blender Version** Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash on pasting geo nodes in new file. **Exact steps for others to reproduce the error** 1. Open file with Geo Nodes. 2. Select geo nodes. 3. Right click and select copy. 4. Open new file. 5. create plane, switch to geo node tab. 6. New geo node modifier. 7. Paste geo nodes. Immediate crash.
D added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-31 03:29:23 +02:00
Author

Logs attached.

Logs attached.
351 KiB

Can not reproduce on Linux

Can not reproduce on Linux

I can't paste nodes in other blender instance.

I can't paste nodes in other blender instance.
Author

Iliya Katushenock not sure I understand. do you mean you are having same issue? or you don't know how to?

you can paste between geo nodes on same file. you have to use right click menu to copy and paste. keyboard shortcuts don't work.

[Iliya Katushenock](https://projects.blender.org/mod_moder) not sure I understand. do you mean you are having same issue? or you don't know how to? you can paste between geo nodes on same file. you have to use right click menu to copy and paste. keyboard shortcuts don't work.
Member

When using menu Node -> Paste, it says clipboard empty so I'm not able to do that on linux 🤔

When using menu Node -> Paste, it says clipboard empty so I'm not able to do that on linux 🤔
Member

Hi, unable to confirm the crash. Pasting nodes in new instance works here with both ctrl v and option from panel.
From logs, crash occurred in depsgraph function in main thread.
@lichtwerk , are you able reproduce on mac?

Hi, unable to confirm the crash. Pasting nodes in new instance works here with both ctrl v and option from panel. From logs, crash occurred in depsgraph function in main thread. @lichtwerk , are you able reproduce on mac?
Member

Cannot repro here

**System Information**
Operating system: macOS-14.4.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 1.2
version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270`

@Akagumo : does this happen with any node (I tested with a simple Transform Geometry node and it worked fine)

Does this also happen with Factory Defaults?

Cannot repro here ``` **System Information** Operating system: macOS-14.4.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M2 1.2 version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` ``` @Akagumo : does this happen with any node (I tested with a simple `Transform Geometry` node and it worked fine) Does this also happen with Factory Defaults?
Philipp Oeser added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-04-02 09:52:57 +02:00
Author

Sorry for the late reply, I have been so slammed.

I forget the ones I was copying before, but testing ones just now...

Set Material crashes, by itself or with other nodes connected.
I would guess that since there is no matching material that is why Blender crashes.
Blender should just clear the material or have an indicator that material is missing, not crash.

Grid<>Set Position<>Instance on Points does not crash.

Sorry for the late reply, I have been so slammed. I forget the ones I was copying before, but testing ones just now... Set Material crashes, by itself or with other nodes connected. I would guess that since there is no matching material that is why Blender crashes. Blender should just clear the material or have an indicator that material is missing, not crash. Grid<>Set Position<>Instance on Points does not crash.
Member

Can confirm, will check

This is true for other nodes referencing an ID, too (e.g. Object info node).
Also tried this in the shader editor (e.g. with a Texture Coordinate node -- which can also reference an ID), but that one survives and just leaves the ID empty...

Can confirm, will check This is true for other nodes referencing an ID, too (e.g. `Object info` node). Also tried this in the shader editor (e.g. with a `Texture Coordinate` node -- which can also reference an ID), but that one survives and just leaves the ID empty...
Philipp Oeser added
Status
Confirmed
Module
Nodes & Physics
and removed
Status
Needs Information from User
labels 2024-04-12 09:59:00 +02:00
Philipp Oeser self-assigned this 2024-04-12 09:59:54 +02:00
Philipp Oeser changed title from Pasting Geo Nodes into new file crashes Blender to Pasting Geo Nodes referencing an ID (e.g. Set Material or Object Info) into new file crashes Blender 2024-04-12 10:00:30 +02:00
Philipp Oeser added
Priority
High
Interest
Geometry Nodes
and removed
Priority
Normal
labels 2024-04-12 10:00:53 +02:00
Member

Got a fix, will double-check though if this is really supposed to work like that...

Got a fix, will double-check though if this is really supposed to work like that...
Member

posible fix is up, see !120576

posible fix is up, see !120576

@lichtwerk Shall I take over and work on a PR to fix this... unfortunate situation (as discussed in your PR) ;) ?

@lichtwerk Shall I take over and work on a PR to fix this... unfortunate situation (as discussed in your PR) ;) ?
Member

@lichtwerk Shall I take over and work on a PR to fix this... unfortunate situation (as discussed in your PR) ;) ?

yep, very welcome if you take over :)

> @lichtwerk Shall I take over and work on a PR to fix this... unfortunate situation (as discussed in your PR) ;) ? yep, very welcome if you take over :)
Philipp Oeser removed their assignment 2024-04-22 10:58:36 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-28 18:59:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120103
No description provided.