Fix #120103: crash pasting geonodes referencing an ID into new file

The was already functionality for checking bNode.id when pasting
(reassigning IDs -- name-based -- when not in a new file), but we can
also have IDs referenced in sockets (e.g. SOCKET_OBJECT) and these were
not handled leading to crashes since the sockets were just duplicated.

Now also do what is done with bNode.id with IDs referenced in sockets.

NOTE: unsure if we should increment usercount here (but apparently
bNode.id also does not do it)
NOTE: there is a bit of duplicated code (but since assigning directly to
socket.default_value didnt update properly had to go through typed
socket values)
NOTE: introduces NodeClipboardItemIDInfo which could also be used for
the handling of bNode.id